--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
   
-    <div class="container-fluid" >
+    <div class="container-fluid" style="height: 100vh;">
         <div class="row">
             <div class="col-md-12" style="height: 2vh;">
                 <nav class="navbar navbar-inverse navbar-fixed-top">
